Fix: completed tasklist z-index

--- a/src/components/TaskList/TaskList.scss
+++ b/src/components/TaskList/TaskList.scss
@@ -48,6 +48,7 @@
   max-height: calc(100vh - #{$header-height});
   padding-bottom: 2px;
   transform: translateY(calc(100% - 54px));
+  z-index: 10;
 }
 
 .completed-tasks-list-header {
